<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SocialClub</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_social_club">Welcome to Social Club</string>
    <string name="create_new_account">Create new account</string>
    <string name="phone">Phone</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>


    <string name="login">LOGIN</string>
    <string name="new_here_create_account">New here? Create account</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="your_profile">Your Profile</string>
    <string name="todo">TODO</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigationdrawer">navigationdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
</resources>