<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"

    tools:context=".Register">


    <EditText
        android:id="@+id/fullName"
        android:layout_width="307dp"
        android:layout_height="53dp"
        android:background="@drawable/round"

        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"

        android:textColor="#FFFFFF"
        android:textColorHint="#DC928888"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <EditText
        android:id="@+id/password"
        android:layout_width="307dp"
        android:layout_height="53dp"
        android:background="@drawable/round"
        android:drawableStart="@drawable/ic_key_24"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#DC928888"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="307dp"
        android:layout_height="53dp"
        android:background="@drawable/round"
        android:drawableStart="@drawable/ic_email_24"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"

        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#DC928888"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="399dp"
        android:layout_height="69dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:selectAllOnFocus="false"
        android:shadowRadius="20"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/welcome_to_social_club"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="408dp"
        android:layout_height="56dp"
        android:fontFamily="@font/lato_black"
        android:shadowRadius="20"
        android:text="Create new account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="307dp"
        android:layout_height="53dp"
        android:background="@drawable/round"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPhonetic"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#DC928888"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676"

        tools:ignore="TextFields"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/registerBtn"

        android:layout_width="136dp"
        android:layout_height="53dp"
        android:background="@drawable/round"
        android:fontFamily="@font/lato_black"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"

        app:backgroundTint="#82FE0190"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/createText"
        android:layout_width="296dp"
        android:layout_height="35dp"
        android:text="@string/already_registered_login_here"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />
</androidx.constraintlayout.widget.ConstraintLayout>